--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shëndeti Im</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <h1>
-        Test
-    </h1>
-    <h1> Test- prej dhurimit</h1>
-    
+    <header class="header">
+        <div class="wrapper-icon-pagename">
+            <div class="icon-menu">
+                <div class="icon-menu-item"></div>
+                <div class="icon-menu-item"></div>
+                <div class="icon-menu-item"></div>
+            </div>
+            <div class="pagename">ShëndetiIM</div>
+        </div>
+        <ul class="logo-social" type="none">
+            <li><img src="./Fotot/facebook.png" class="logo-social-item"></li>
+            <li><img src="./Fotot/instagram.png" class="logo-social-item"></li>
+            <li><img src="./Fotot/pinterest.png" class="logo-social-item"></li>
+            <li><img src="./Fotot/twitter.png" class="logo-social-item"></li>
+        </ul>
+    </header>
+    <hr>
+
 </body>
+
 </html>
