--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         </ul>
     </header>
     <hr>
+    <div class="banner">
+        <div class="banner-item">
+            <p class="banner-item-news">Te Rejat</p>
+            <p class="banner-item-title">COVID-19</p>
+            <p class="banner-item-text">Ndihmoni në parandalimin e përhapjes së Covid-19 mes njerëzve
+                në shtëpi dhe në bashkësi.Udhëzimi i përkohshëm bazohet në ato që dimë aktualisht në 
+                lidhje me infeksionet e tjera virale të frymëmarrjes dhe Covid-19.</p>
+            <button class="banner-item-button">Lexo më Shumë</button>
+        </div>
+        <div class="banner-photo">
+            <img src="./Fotot/covid19-img.jpg" class="banner-photo-item">
+        </div>
+
+    </div>
 
 </body>
 
