--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
     </header>
     <hr>
     <div class="banner">
-        <div class="banner-item">
+        <div class="banner-items">
             <p class="banner-item-news">Te Rejat</p>
-            <p class="banner-item-title">COVID-19</p>
-            <p class="banner-item-text">Ndihmoni në parandalimin e përhapjes së Covid-19 mes njerëzve
-                në shtëpi dhe në bashkësi.Udhëzimi i përkohshëm bazohet në ato që dimë aktualisht në 
-                lidhje me infeksionet e tjera virale të frymëmarrjes dhe Covid-19.</p>
+            <p class="banner-item-title"><b>Informacion mbi COVID-19</b></p>
+            <p class="banner-item-text">Udhëzimet e mëposhtme ndihmojnë në parandalimin e përhapjes së Covid-19 mes
+                njerëzve në shtëpi dhe në bashkësi. Udhëzimi i përkohshëm bazohet në ato që dimë aktualisht në lidhje me
+                infeksionet e tjera virale të frymëmarrjes dhe Covid-19. CDC (Center for Control Disease-Qendra për
+                Kontrollë të Sëmundjeve) do të përditësojë...</p>
             <button class="banner-item-button">Lexo më Shumë</button>
         </div>
         <div class="banner-photo">
