--- a/index.html
+++ b/index.html
@@ -40,8 +40,46 @@
         <div class="banner-photo">
             <img src="./Fotot/covid19-img.jpg" class="banner-photo-item">
         </div>
-
     </div>
+
+
+
+
+    <div class="container">
+        <div class="container-left">
+            <div class="container-left-photo"></div> <br>
+            <p>10 Mënyra për të qëndruar të shëndetshëm dhe në formë</p><br>
+            <p>Ndërkohë që bëjmë aq sa kemi mundësi të jemi sa më të shëndetshëm, kjo është gjithmonë një punë në
+                progres. Ka shumë elemente për një mënyrë jetese të shëndetshme. Përdorni këto këshilla si udhëzues për
+                udhëtimin tuaj në rrugën e një shëndeti më të mirë dhe...</p><br>
+            <p class="container-items-teks-author">Phd.Sc.Dhurim Zenuni</p>
+        </div>
+        <div class="container-right">
+            <div class="container-right-items">
+                <div class="container-right-photo1"></div> <br>
+                <div class="container-right-items-tekst">
+                    <p class="container-items-teks-title"><b>Sa i rëndësishëm është aktiviteti fizik?</b></p><br>
+                    <p class="container-items-teks-author">Phd.Arbnor Lama</p>
+                </div>
+            </div>
+            <div class="container-right-items">
+                <div class="container-right-photo2"></div> <br>
+                <div class="container-right-items-tekst">
+                    <p class="container-items-teks-title"><b>Ja mënyrat si të ushqehemi shëndetshëm çdo ditë!</b></p><br>
+                    <p class="container-items-teks-author">Dr.Bleron Nuredini</p>
+                </div>
+            </div>
+            <div class="container-right-items">
+                <div class="container-right-photo3"></div> <br>
+                <div class="container-right-items-tekst">
+                    <p class="container-items-teks-title"><b>Gjumi, 5 këshilla që na ndihmojnë të flejmë mirë</b></p><br>
+                    <p class="container-items-teks-author">Dr.Elton Beqa</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 </body>
 
