--- a/index.html
+++ b/index.html
@@ -140,10 +140,26 @@
                         maskës, distancimin fizik dhe higjienën personale.</p>
                 </div>
                 <div class="container2-video">
-                    <video width="700" height="450" controls>
+                    <video width="560" height="360" controls class="container2-video-item">
                         <source src="./Video/Coronavirus_ Good Hygiene Starts Here.mp4">
                     </video>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container3">
+        <div class="container3-photo"></div>
+        <div class="container3-txt-button">
+            <div class="container3-txt">
+                <p class="container3-txt-high">RRI I SHENDETDHEM.
+                    QËNDRO I INFORMUAR.</p>
+                <p class="container3-txt-low">Merrni Informatat e përditshme të Shëndetit dhe këshilla shëndetësore,
+                    përditësime për shëndetin dhe më shumë.</p>
+            </div>
+            <div class="container3-subform">
+                <label for="email"></label>
+                <input type="email" placeholder="Enter Your Email">
+                <button class="container3-subbuton">Subscribe Now</button>
             </div>
         </div>
     </div>
