--- a/index.html
+++ b/index.html
@@ -175,33 +175,33 @@
                 <div class="footer-items">
                     <h3 class="footer-items-title">Kategorit Shendetsore</h3>
                     <ul type="none">
-                        <li class="footer-items-txt">sda</li>
-                        <li class="footer-items-txt">dsa</li>
-                        <li class="footer-items-txt">dasd</li>
-                        <li class="footer-items-txt">dasd</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
+                        <li class="footer-items-txt">Sëmundjet dhe gjendjet</li>
+                        <li class="footer-items-txt">Simptomat & Shenjat</li>
+                        <li class="footer-items-txt">Procedurat & Testet</li>
+                        <li class="footer-items-txt">Medikamente</li>
+                        <li class="footer-items-txt">Jetese e shendetshme</li>
+                        <li class="footer-items-txt">Vitaminat & Suplementet</li>
+                        <li class="footer-items-txt">Koleksioni i Imazheve</li>
+                        <li class="footer-items-txt">Slideshow mjekësor</li>
                     </ul>
                 </div>
                 <div class="footer-items">
                     <h3 class="footer-items-title">Qendrat e njohura shëndetësore</h3>
                     <ul type="none">
-                        <li class="footer-items-txt">sda</li>
-                        <li class="footer-items-txt">dsa</li>
-                        <li class="footer-items-txt">dasd</li>
-                        <li class="footer-items-txt">dasd</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
-                        <li class="footer-items-txt">sdad</li>
+                        <li class="footer-items-txt">Alergjitë</li>
+                        <li class="footer-items-txt">HIV/AIDS</li>
+                        <li class="footer-items-txt">Presioni i gjakut</li>
+                        <li class="footer-items-txt">Kanceri</li>
+                        <li class="footer-items-txt">Diabeti</li>
+                        <li class="footer-items-txt">Semundje infektive</li>
+                        <li class="footer-items-txt">Neurologjia</li>
+                        <li class="footer-items-txt">më shumë...</li>
                     </ul>
                 </div>
                 <div class="footer-items">
-                    <h3 class="footer-items-title">ShëndetiIM</h3>
+                    <h3 class="footer-items-title">SëndetiIM</h3>
                     <ul type="none">
-                        <li class="footer-items-txt">HOME</li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="index.html">HOME</a></li>
                         <li class="footer-items-txt">ABOUT US</li>
                         <li class="footer-items-txt">CONTACT US</li>
                     </ul>
