Update About Us
Rregullim Simetrie...
Shtimi i Foterit...

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -41,14 +41,55 @@
                 <div class="SecondPicture2"></div>
 
                 <div class="TextofAboutUs">
-                    <p class="TestAboutUsColor1">About Us</p>
-                    <p class="TestAboutUsColor2">Nunc mi ipsum faucibus vitae aliquet. Pellentesque elit eget gravida
-                        cum sociis natoque penatibus.
-                        Urna
-                        duis
-                        convallis convallis tellus id interdum velit. Proin sed libero enim sed faucibus turpis in.</p>
-                    <p class="TestAboutUsColor3">Data e Krijimit</p>
-                    <button class="TextofAboutUs-Button">Kthehu Tek Faqja Kryesore</button>
+                    <p class="TestAboutUsColor1">Rreth Nesh</p>
+                    <p class="TestAboutUsColor2">Nga fillimi në fund, faqja ShëndetiIM qëndron si faqe informuese rreth
+                        shëndetit dhe lajmeve nga shëndeti. Për më tepër, faqja ShëndetiIM mund te konsiderohet edhe si
+                        faqe edukuese rreth mirëqenies shëndetësore.<br>
+                        E krijuar nga 2 student te Shkencave Kompjuterike me një te kaluar nga shkolla e mesme e
+                        mjekësisë.</p>
+                    <p class="TestAboutUsColor3">Arbnor Lama & Dhurim Zenuni</p>
+                    <button class="TextofAboutUs-Button"><a href="Home.html"
+                                class="TextofAboutUs-Button-link">Kthehu Tek Faqja Kryesore</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer pv-40px ">
+        <div class="content-center ">
+            <div class="footer-wrapper">
+                <div class="footer-items">
+                    <h3 class="footer-items-title">Kategorit Shendetsore</h3>
+                    <ul type="none">
+                        <li class="footer-items-txt">Sëmundjet dhe gjendjet</li>
+                        <li class="footer-items-txt">Simptomat & Shenjat</li>
+                        <li class="footer-items-txt">Procedurat & Testet</li>
+                        <li class="footer-items-txt">Medikamente</li>
+                        <li class="footer-items-txt">Jetese e shendetshme</li>
+                        <li class="footer-items-txt">Vitaminat & Suplementet</li>
+                        <li class="footer-items-txt">Koleksioni i Imazheve</li>
+                        <li class="footer-items-txt">Slideshow mjekësor</li>
+                    </ul>
+                </div>
+                <div class="footer-items">
+                    <h3 class="footer-items-title">Qendrat e njohura shëndetësore</h3>
+                    <ul type="none">
+                        <li class="footer-items-txt">Alergjitë</li>
+                        <li class="footer-items-txt">HIV/AIDS</li>
+                        <li class="footer-items-txt">Presioni i gjakut</li>
+                        <li class="footer-items-txt">Kanceri</li>
+                        <li class="footer-items-txt">Diabeti</li>
+                        <li class="footer-items-txt">Semundje infektive</li>
+                        <li class="footer-items-txt">Neurologjia</li>
+                        <li class="footer-items-txt">më shumë...</li>
+                    </ul>
+                </div>
+                <div class="footer-items">
+                    <h3 class="footer-items-title">SëndetiIM</h3>
+                    <ul type="none">
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="index.html">HOME</a></li>
+                        <li class="footer-items-txt">ABOUT US</li>
+                        <li class="footer-items-txt">CONTACT US</li>
+                    </ul>
                 </div>
             </div>
         </div>
