--- a/RegisterForm.html
+++ b/RegisterForm.html
@@ -19,40 +19,53 @@
     <div class="container">
         <div class="container-registerform">
             <div class="container-registerform-items">
-                <span class="registerform-title">Registration </span>
+                <span class="registerform-title">Regjistrimi </span>
                 <div class="container-items-space">
                     <div class="row-space">
-                        <label class="registerform-firstname">First Name</label><br>
+                        <label class="registerform-data">Emri</label><br><br>
                         <input type="text" class="registerform-input">
                     </div>
                     <div class="row-space">
-                        <label class="registerform-lastname">Last Name</label><br>
+                        <label class="registerform-data">Mbiemri</label><br><br>
                         <input type="text" class="registerform-input">
                     </div>
                 </div>
                 <div class="container-items-space">
                     <div class="row-space">
-                        <label class="registerform-firstname">First Name</label><br>
-                        <input type="text" class="registerform-input">
+                        <label class="registerform-data">Ditëlindja</label><br><br>
+                        <input type="date" class="registerform-input">
                     </div>
                     <div class="row-space">
-                        <label class="registerform-lastname">Last Name</label><br>
-                        <input type="text" class="registerform-input">
-                    </div>
-                </div>
-                <div class="container-items-space">
-                    <div class="row-space">
-                        <label class="registerform-firstname">First Name</label><br>
-                        <input type="text" class="registerform-input">
-                    </div>
-                    <div class="row-space">
-                        <label class="registerform-lastname">Last Name</label><br>
-                        <input type="text" class="registerform-input">
-                    </div>
-                </div>
+                        <div class="row-space-items">
+                            <label class="registerform-data">Gjinia</label><br><br>
 
+                            <label class="registerform-input-gander"><input type="radio" class="registerform-input-gandermale" name="gjinia"> Male
+                            </label>
+                            <label><input type="radio" class="registerform-input-ganderfemale" name="gjinia">
+                                Female</label>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="container-items-space">
+                    <div class="row-space">
+                        <label class="registerform-data">Email</label><br><br>
+                        <input type="email" class="registerform-input">
+                    </div>
+                    <div class="row-space">
+                        <label class="registerform-data">Numri Telefonit</label><br><br>
+                        <input type="text" class="registerform-input">
+                    </div>
+                </div>
+                <div class="container-registerform-citizenship">
+                    <span>Shtestesia</span><br>
+                    <select class="registerform-citizenship">
+                        <option>Shqipëria</option>
+                        <option>Kosova</option>
+                    </select>
+                </div>
                 <div class="container-registerform-button">
-                    <button class="registerform-button">Register</button>
+                    <button class="registerform-button">Regjistrohu</button>
                 </div>
             </div>
         </div>
