--- a/ContactUS.html
+++ b/ContactUS.html
@@ -33,21 +33,42 @@
         <div class="conteiner">
             <div class="content">
                 <div class="content-left-side">
-                    <div class="content-adresa">
+                    <div class="content-adress">
+                        <img src="./Fotot/icons8-address-50.png" class="icon-adress">
                         <div class="title">Adresa</div>
                         <div class="text1">UBT</div>
                         <div class="text2">Dega Ferizaj</div>
                     </div>
                     <div class="content-phone">
+                        <img src="./Fotot/icons8-phone-30.png" class="icon-phone">
                         <div class="title">Nr.Telefonit</div>
                         <div class="text1">+38345472620</div>
                         <div class="text2">+38349924052</div>
                     </div>
                     <div class="content-email">
+                        <img src="./Fotot/icons8-mail-50.png" class="icon-email">
                         <div class="title">Email</div>
                         <div class="text1">al55544@ubt-uni.net</div>
-                        <div class="text2">dz@ubt-uni.net</div>
+                        <div class="text2">dz52352@ubt-uni.net</div>
                     </div>
+                </div>
+                <div class="content-right-side">
+                    <div class="content-right-side-title">Na dërgoni një mesazh</div>
+                    <p class="content-right-side-text">Nëse keni një sygjerim, verejtje apo kritik për ne, apo ndonjë
+                        lloj pyetjeje në lidhje me
+                        Shëndetin, mund të dërgoni mesazhe nga këtu. Është kënaqësi t'ju ndihmojmë.</p>
+                    <form action="#">
+                        <div class="input-box">
+                            <input type="text" placeholder="Enter your name">
+                        </div>
+                        <div class="input-box">
+                            <input type="text" placeholder="Enter your email">
+                        </div>
+                        <div class="input-box message-box"></div>
+                        <div class="button">
+                            <input type="button" value="Dërgo">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
