--- a/ContactUS.html
+++ b/ContactUS.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ShëndetiIM ContactUS</title>
     <link rel="stylesheet" href="css/ContactUS.css">
 </head>
 
@@ -33,6 +33,7 @@
         <div class="conteiner">
             <div class="content">
                 <div class="content-left-side">
+                    <div class="title"><b>ContactUS</b></div>
                     <div class="content-adress">
                         <img src="./Fotot/icons8-address-50.png" class="icon-adress">
                         <div class="title">Adresa</div>
@@ -58,15 +59,17 @@
                         lloj pyetjeje në lidhje me
                         Shëndetin, mund të dërgoni mesazhe nga këtu. Është kënaqësi t'ju ndihmojmë.</p>
                     <form action="#">
-                        <div class="input-box">
-                            <input type="text" placeholder="Enter your name">
+                        <div>
+                            <input type="text" placeholder="Enter your name" class="input-box">
                         </div>
-                        <div class="input-box">
-                            <input type="text" placeholder="Enter your email">
+                        <div>
+                            <input type="text" placeholder="Enter your email" class="input-box">
                         </div>
-                        <div class="input-box message-box"></div>
-                        <div class="button">
-                            <input type="button" value="Dërgo">
+                        <div>
+                            <textarea placeholder="Enter your message" class="input-box-message-box"></textarea>
+                        </div>
+                        <div>
+                            <input type="button" value="Dërgo" class="button">
                         </div>
                     </form>
                 </div>
