--- a/Home.html
+++ b/Home.html
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <div class="container2 ">
+    <div class="container2 pv-40px vh-60">
         <div class="content-center ">
             <div class="container2-wrapper">
                 <div class="container2-txt">
@@ -199,9 +199,11 @@
                 <div class="footer-items">
                     <h3 class="footer-items-title">SëndetiIM</h3>
                     <ul type="none">
-                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="index.html">HOME</a></li>
-                        <li class="footer-items-txt">ABOUT US</li>
-                        <li class="footer-items-txt">CONTACT US</li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="Home.html">HOME</a></li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="AboutUs.html">ABOUT US</a></li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="ContactUS.html">CONTACT US</a></li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="LoginForm.html">LOGIN</a></li>
+                        <li class="footer-items-txt"><a class="foter-item-txt-link" href="RegisterForm.html">REGISTER</a></li>
                     </ul>
                 </div>
             </div>
