--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shëndeti Im</title>
     <link rel="stylesheet" href="./css/Home.css">
+    <link rel="stylesheet" href="./css/Slider.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
@@ -52,8 +53,7 @@
                                 class="link-button">Lexo më Shumë</a>
                         </span></button>
                 </div>
-                <div class="banner-photo">
-                    <img src="./Fotot/covid19-img.jpg" class="banner-photo-item">
+                <div class="slider-container ">
                 </div>
             </div>
         </div>
@@ -209,6 +209,7 @@
             </div>
         </div>
     </div>
+    <script src="js/Slider.js" ></script>
 </body>
 
 </html>
